@@ -1179,6 +1179,8 @@ OpenXML_TRANSLATE_FOOTNOTES=&Footnotes
 OpenXML_TRANSLATE_ENDNOTES=&Endnotes
 OpenXML_TRANSLATE_HEADERS=He&aders
 OpenXML_TRANSLATE_FOOTERS=Foote&rs
+# Duplicate text for compatibility with older versions of Word
+OpenXML_TRANSLATE_FALLBACK_TEXT=Duplicate Fallbac&k Text
 OpenXML_EXCEL=Excel
 OpenXML_TRANSLATE_EXCEL_COMMENTS=Comme&nts
 OpenXML_TRANSLATE_EXCEL_SHEET_NAMES=&Sheet Names
